orgapy/static/orgapy/css/orgapy.css
/* ... */
@keyframes fadeout {
    from {bottom: 2rem; opacity: 1;}
    to {bottom: 0; opacity: 0;}
}

/***** CARDS ******************************************************************/

.card {
    /*padding: .8rem;*/
    display: flex;
    flex-direction: column;
    border: 1px solid var(--border-primary);
    background-color: var(--bg-primary);
    border-radius: .4rem;
}

.card-header {
    margin: 0;
    padding: .8rem;
}

.card-body {
    padding: 0 .8rem .8rem .8rem;
}

.card-body:first-child {
    padding-top: .8rem;
}

.card-actions {
    display: flex;
    background: var(--bg-primary-alt);
    border-top: 1px solid var(--border-secondary);
    border-bottom-left-radius: .4rem;
    border-bottom-right-radius: .4rem;
    align-items: center;
    overflow: hidden;
}

.card-actions button,
.card-actions .button,
.card-actions input[type=submit] {
    border: none;
    border-radius: 0;
    padding: .6rem;
}

.card-actions button:not(:hover),
.card-actions .button:not(:hover),
.card-actions input[type=submit]:not(:hover) {
    background: none;
}

/***** MENUS AND DROPDOWNS ****************************************************/

.contextmenu {
    position: fixed;
    z-index: 2;
}

.menu {
    display: flex;
    flex-direction: column;
    background: var(--bg-secondary);
    border-radius: .2rem;
    padding: 0;
    margin: 0;
    list-style: none;
    box-shadow: 0 0 4px black;
    z-index: 2;
    line-height: 1;
    border: 1px solid var(--border-secondary);
    user-select: none;
}

.menu:empty {
    border: none;
}

.menu-item {
    cursor: pointer;
}

.menu-item:hover,
.menu-item.hover {
    background: var(--bg-secondary-hover);
}

.menu a,
.menu button,
.menu .dropdown-toggle {
    color: inherit;
    text-decoration: inherit;
    box-sizing: border-box;
    display: block;
    border: none;
    padding: .4rem;
    background: none;
    white-space: nowrap;
    width: 100%;
    text-align: left;
    border-radius: 0;
    overflow: hidden;
    text-overflow: ellipsis;
}

.menu hr {
    width: 100%;
    margin: 0;
    border: none;
    border-top: 1px solid var(--border-secondary);
}

.dropdown {
    position: relative;
}

.dropdown > .menu {
    display: none;
    left: 0;
    position: absolute;
    top: 100%;
    width: fit-content;
}

.dropdown.active .menu,
.dropdown .dropdown-toggle:focus+.menu,
.dropdown .menu:hover,
.menu-item .dropdown-toggle:hover+.menu {
    display: flex;
}

.menu-item .dropdown {
    width: 100%;
}

.menu-item .dropdown-toggle::after {
    content: "❭";
    float: right;
    height: 0;
    line-height: .8rem;
}

/* TODO: In JavaScript menu handling, position submenu according the available space */
.menu .menu {
    top: 0;
    left: 100%;
    max-height: 320px;
    overflow-y: auto;
}

/***** DIALOGS ****************************************************************/

dialog {
    box-sizing: border-box;
    color: var(--text);
    background: none;
    border: none;
    width: 36rem;
    padding: 0;
    height: fit-content;
    overflow: visible;
}

dialog::backdrop {
    background: black;
    opacity: 0.4;
}

dialog:focus {
    outline: none;
}

dialog > .card {
    box-shadow: 0 0 2px black;
}

/***** CALENDAR ***************************************************************/

.calendar {
    display: flex;
    flex-direction: column;
    align-items: center;
    --cellsize: 14px;
    --level-0: #161b22;
    --level-1: #0E4429; /* #39d353 */
    --level-2: #07582D; /* #83d941 */
    --level-3: #006D32; /* #b5eb64 */
    --level-4: #138A3A; /* #e6f590 */
    --level-5: #26A641; /* #feffe2 */
    --level-6: #30BD4A; /* #feffe2 */
    --level-7: #39D353; /* #feffe2 */
    --level-8: #2CE24A; /* #feffe2 */
    --level-9: #1EF141; /* #feffe2 */
    --level-more: #feffe2; /* #ffffff */
}

.calendar--weekly {
    --cellsize: .56rem;
}

.calendar-header {
    display: flex;
    justify-content: center;
    margin-bottom: .4rem;
    align-items: baseline;
    gap: .4rem;
}

.calendar-year {
    width: 3rem;
    font-weight: bold;
    font-size: large;
    text-align: center;
    user-select: none;
}

.calendar-button {
    padding-top: 0;
    padding-bottom: 0;
}

.calendar-body {
    display: flex;
    flex-direction: column;
}

.calendar-row {
    display: flex;
    align-items: center;
}

.calendar-day-number {
    writing-mode: sideways-lr;
    width: var(--cellsize);
    margin: 1px;
    line-height: 12px;
    font-size: small;
}

.calendar-day-number:first-child,
.calendar-month-name {
    text-align: right;
    width: 28px;
    margin-right: 2px;
    font-size: small;
}

.calendar-day {
    width: var(--cellsize);
    height: var(--cellsize);
    margin: 1px;
    background: var(--level-0); /*#161b22*/
    border-radius: .125rem;
}

.calendar-day.disabled {
    background: none;
}

.calendar-day.filled-1 {background-color: var(--level-1)}
.calendar-day.filled-2 {background-color: var(--level-2)}
.calendar-day.filled-3 {background-color: var(--level-3)}
.calendar-day.filled-4 {background-color: var(--level-4)}
.calendar-day.filled-5 {background-color: var(--level-5)}
.calendar-day.filled-6 {background-color: var(--level-6)}
.calendar-day.filled-7 {background-color: var(--level-7)}
.calendar-day.filled-8 {background-color: var(--level-8)}
.calendar-day.filled-9 {background-color: var(--level-9)}
.calendar-day.filled-more {background-color: var(--level-more)}

.calendar-popover {
    position: absolute;
    background: var(--bg-secondary);
    display: flex;
    flex-direction: column;
    gap: .2rem;
    padding: .4rem;
    border-radius: .4rem;
    border: 1px solid var(--border-secondary);
    transform: translateX(-50%);
    max-width: min(100%, 12rem);
}

.calendar-popover button,
.calendar-popover .button {
    background-color: var(--bg-secondary-alt);
}

@media (max-width: 600px) {

    .calendar {
        height: 600px;
    }

    .calendar-body {
        transform: rotate(90deg) translateX(160px);
    }

}
/* ... */

